<resources>
    <string name="app_name">Dish</string>
    <string name="dish_name">(Nombre receta)</string>
    <string name="dish_name_hint">Nombre de la receta</string>
    <string name="dish_time">Momento:</string>
    <string name="dish_time_icon_desc"> Icono que indica si es una comida de mediodía o cena</string>
    <string name="dish_diet">Dieta:</string>
    <string name="dish_diet_icon_desc"> Icono que indica si es una comida vegetariana, vegana ,cárnica o pescetariana</string>
    <string name="ingredients">Ingredientes:</string>
    <string name="delete">Borrar</string>
    <string name="edit">Editar</string>
    <string name="save">Guardar</string>
    <string name="title_activity_ex_activity">ex_activity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="moments">
        <item>Comida</item>
        <item>Cena</item>
    </string-array>
    <string-array name="diets">
        <item>Carnívoro</item>
        <item>Pescetariano</item>
        <item>Vegetariano</item>
        <item>Vegano</item>
    </string-array>
</resources>